--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
-//spring.datasource.url=jdbc:h2:mem:db;PASSWORD=sa;USER=sa
+spring.datasource.url=jdbc:h2:mem:db;DB_CLOSE_ON_EXIT=FALSE
 
 spring.mvc.view.prefix=/WEB-INF/jsp/
 spring.mvc.view.suffix=.jsp
 
-spring.datasource.url=jdbc:h2:file:C:/data/database
+//spring.datasource.url=jdbc:h2:file:C:/data/database
 
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
@@ -13,3 +13,6 @@ spring.h2.console.enabled=true
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.defer-datasource-initialization=true
+
+server.port=8081
+
